--- a/view/error/index.phtml
+++ b/view/error/index.phtml
@@ -1,3 +1,3 @@
 <div class="parent">
-    <span class="_404-text">ERROR</span>
+    <span class="_404-text">ERROR<br><small><?php echo $this->vars['exception']->getMessage() ?></small></span>
 </div>
