--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title><?php echo ucfirst($this->controller) ?> | MiniMVC</title>
+    <title><?php echo $this->route->controller ?> | MiniMVC</title>
     <link href="/css/bootstrap.min.css" media="screen" rel="stylesheet" type="text/css">
     <link href="/css/font-awesome.min.css" media="screen" rel="stylesheet" type="text/css">
     <link href="/css/styles.css" media="screen" rel="stylesheet" type="text/css">
