Updated the example controllers and views, the readme, some other changes

--- a/view/about/index.phtml
+++ b/view/about/index.phtml
@@ -1,1 +1,11 @@
-about
+<div class="container">
+    <div class"row">
+        <div class="col-sm-12">
+            <div class="well">
+                <h1>About MiniMVC</h1>
+                <p>This is the <?php echo $this->route->controllerNamespace ?> and the <?php echo $this->route->action ?>Action</p>
+                <p><a href="/about/vars/">About Variables</a></p>
+            </div>
+        </div>
+    </div>
+</div>
