--- a/view/home/index.phtml
+++ b/view/home/index.phtml
@@ -2,7 +2,8 @@
     <div class"row">
         <div class="col-sm-12">
             <div class="well">
-                I am a view and <?php echo $this->vars['test'] ?>
+                <h1>Welcome to MiniMVC</h1>
+                <p>This is the home page. Read about how this works <a href="/about/">here</a>.</p>
             </div>
         </div>
     </div>
